// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots App playground 1`] = `
<div
  className="container"
>
  <nav
    className="appbar "
  >
    <h2>
      Flap.js
    </h2>
    <div
      className="apptitle"
    >
      <select
        defaultValue={null}
        onBlur={[Function]}
      >
        <option
          value="base"
        >
          Default
        </option>
        <option
          value="node"
        >
          Node Graph
        </option>
        <option
          value="fa"
        >
          Finite Automata
        </option>
        <option
          value="re"
        >
          Regular Expression
        </option>
        <option
          value="pda"
        >
          Pushdown Automata
        </option>
        <option
          value="cfg"
        >
          Context-Free Grammar
        </option>
        <option
          value="tm"
        >
          Turing Machine
        </option>
        <option
          value="logic"
        >
          Logic Circuit
        </option>
      </select>
      <input
        onChange={[Function]}
        type="text"
        value="Untitled"
      />
    </div>
    <button
      onClick={[Function]}
    >
      Undo
    </button>
    <button
      onClick={[Function]}
    >
      Redo
    </button>
    <input
      name="import"
      onChange={[Function]}
      type="file"
    />
  </nav>
  <div
    className="container"
  >
    <section
      className="container "
    >
      <div
        className="background"
      >
        <div
          className="container"
        />
      </div>
      <div
        className="foreground"
      >
        <div
          className="container "
          style={
            Object {
              "flexDirection": "row-reverse",
            }
          }
        >
          <div
            className="sidebar right"
          >
            <div
              className="sidetab horizontal"
            >
              <button
                className="container "
                onClick={[Function]}
              >
                <span
                  className="icon"
                />
              </button>
              <button
                className="container "
                onClick={[Function]}
              >
                <span
                  className="icon"
                />
              </button>
            </div>
          </div>
          <div
            className="viewport"
          >
            <div
              className="container"
              style={
                Object {
                  "flexDirection": "row-reverse",
                }
              }
            >
              <div
                className="drawer  right"
                style={
                  Object {
                    "height": "100%",
                    "width": "30%",
                  }
                }
              >
                <div
                  className="handle"
                  onMouseDown={[Function]}
                  role="presentation"
                />
                <div
                  className="content"
                >
                  <h2>
                    Exporting
                  </h2>
                  <ul />
                </div>
              </div>
              <div
                className="viewport"
              >
                <div
                  className="container"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots ComputedStyleInput playground 1`] = `
<div>
  <div
    id="#source"
    style={
      Object {
        "background": "var(--some-background)",
        "color": "var(--some-color)",
      }
    }
  >
    Hello.
  </div>
  <input
    className=""
    disabled={false}
    onChange={[Function]}
    type="color"
    value={null}
  />
  <input
    className=""
    disabled={false}
    onChange={[Function]}
    type="color"
    value={null}
  />
</div>
`;

exports[`Storyshots DrawerLayout playground 1`] = `
<div>
  <style>
    .sb-show-main { margin: 0; }
  </style>
  <div
    style={
      Object {
        "height": "100vh",
        "width": "100vw",
      }
    }
  >
    <div
      className="container"
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <div
        className="drawer  left open"
        style={
          Object {
            "height": "100%",
            "width": "30%",
          }
        }
      >
        <div
          className="handle"
          onMouseDown={[Function]}
          role="presentation"
        />
        <div
          className="content"
        >
          <div
            style={
              Object {
                "color": "white",
                "height": "100%",
                "width": "100%",
              }
            }
          >
            I am drawer content. Yippee!!!
          </div>
        </div>
      </div>
      <div
        className="viewport"
      >
        <div
          style={
            Object {
              "color": "black",
              "height": "100%",
              "width": "100%",
            }
          }
        >
          <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas in sem magna. Aliquam ultrices convallis cursus. In hac habitasse platea dictumst. Quisque eu tellus magna. Curabitur aliquam luctus ex. Maecenas purus arcu, tincidunt non sapien quis, finibus vestibulum ante.
          </p>
          <p>
            Curabitur vulputate et ligula in congue. Phasellus ac imperdiet libero, sagittis interdum elit. Suspendisse potenti.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots HelloWorld custom style 1`] = `
<button
  className="helloWorld"
  onClick={[Function]}
>
  <h1
    className="title"
    style={
      Object {
        "backgroundColor": "pink",
        "border": "5px dotted limegreen",
      }
    }
  >
    Hello 
    custom style
  </h1>
</button>
`;

exports[`Storyshots HelloWorld playground 1`] = `
<button
  className="helloWorld"
  onClick={[Function]}
>
  <h1
    className="title"
  >
    Hello 
    World!
  </h1>
</button>
`;

exports[`Storyshots HelloWorld with rainbow 1`] = `
<button
  className="helloWorld"
  onClick={[Function]}
>
  <h1
    className="title rainbow "
  >
    Hello 
    World!
  </h1>
</button>
`;

exports[`Storyshots HelloWorld with title 1`] = `
<button
  className="helloWorld"
  onClick={[Function]}
>
  <h1
    className="title"
  >
    Hello 
    home
  </h1>
</button>
`;

exports[`Storyshots Pane playground 1`] = `
<section
  className="container  open"
>
  <header>
    <button
      className="dropdown"
      onClick={[Function]}
    >
      <span
        className="title"
      />
      <span
        className="icon"
      />
    </button>
  </header>
  <main />
</section>
`;

exports[`Storyshots SideBarLayout playground 1`] = `
<div>
  <style>
    .sb-show-main { margin: 0; }
  </style>
  <div
    style={
      Object {
        "height": "100vh",
        "width": "100vw",
      }
    }
  >
    <div
      className="container "
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <div
        className="sidebar left"
      >
        <div>
          <button>
            1
          </button>
          <button>
            2
          </button>
          <button>
            3
          </button>
          <button>
            4
          </button>
          <button>
            5
          </button>
        </div>
      </div>
      <div
        className="viewport"
      >
        <div
          style={
            Object {
              "color": "black",
              "height": "100%",
              "width": "100%",
            }
          }
        >
          <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas in sem magna. Aliquam ultrices convallis cursus. In hac habitasse platea dictumst. Quisque eu tellus magna. Curabitur aliquam luctus ex. Maecenas purus arcu, tincidunt non sapien quis, finibus vestibulum ante.
          </p>
          <p>
            Curabitur vulputate et ligula in congue. Phasellus ac imperdiet libero, sagittis interdum elit. Suspendisse potenti.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots StyleInput playground 1`] = `
<div>
  <div
    id="#source"
    style={
      Object {
        "color": "var(--color)",
      }
    }
  >
    Hiya.
  </div>
  <input
    className=""
    disabled={false}
    onChange={[Function]}
    type="color"
    value={null}
  />
</div>
`;

exports[`Storyshots WorkspaceLayout playground 1`] = `
<div>
  <style>
    .sb-show-main { margin: 0; }
  </style>
  <div
    style={
      Object {
        "height": "100vh",
        "width": "100vw",
      }
    }
  >
    <section
      className="container "
    >
      <div
        className="background"
      >
        <div>
          Duis imperdiet enim ut augue molestie elementum. In sagittis volutpat rutrum. Cras facilisis libero libero, in tempor ipsum rutrum vitae. Proin congue, odio eu consequat ultricies, lorem tellus blandit ex, a pulvinar ligula felis a nisi. Pellentesque fermentum a metus ac consectetur. In eros dolor, auctor nec elementum vel, iaculis vitae felis. In consectetur aliquam lorem, quis porta turpis molestie a. Quisque consectetur vulputate sem, nec cursus sem aliquet non. Pellentesque diam velit, ornare venenatis elit nec, pretium interdum libero. In vestibulum purus lectus, sit amet condimentum ante pellentesque vitae. Praesent ut tincidunt sapien, eu sollicitudin leo.
        </div>
      </div>
      <div
        className="foreground"
      >
        <div
          style={
            Object {
              "background": "dodgerblue",
            }
          }
        >
          Sed diam est, fermentum et blandit id, blandit ut est. Morbi venenatis interdum magna id feugiat. Nunc vestibulum sit amet massa ut malesuada. Donec non tortor eu ex feugiat finibus et non dolor. Integer in leo lorem. Nam accumsan finibus libero vehicula viverra. Fusce pulvinar sapien in tincidunt fermentum. Quisque vehicula convallis ullamcorper. Etiam luctus volutpat nisi, ut feugiat risus maximus tempus. Donec tincidunt accumsan sem. Donec vitae orci nec nisi scelerisque mollis. Ut fermentum sem eu magna volutpat semper. Suspendisse porta dui sit amet nulla hendrerit tincidunt. Nam eget diam sed libero tincidunt volutpat in non nisl. Cras id venenatis magna, sed facilisis tellus. Morbi lacinia at ante at congue.
        </div>
      </div>
    </section>
  </div>
</div>
`;
